--- a/public/admin-assets/css/style.css
+++ b/public/admin-assets/css/style.css
@@ -1904,6 +1904,21 @@ height: 22px;
 .canvas-pink{background: #fd3995;}
 .canvas-green{background: #34bfa3;}
 .canvas-blue{background: #5d78ff;}
+.canvas-yellow{background: #e9ec1c;}
+.canvas-orange{background: #df832e;}
+.canvas-gray{background: #95968b;}
+.canvas-red{background: #f30f22;}
+.canvas-megenta{background: #f35c68;}
+.canvas-purple{background: #c07c16;}
+.canvas-black{background: #000000;}
+.canvas-cyne{background: #00FFFb;}
+.canvas-white{background: #FFFFFF;}
+
+
+
+
+
+
 .canvas{width:100%; margin-top: 15px;}
 .canvas-body{border: 1px solid #ddd; box-sizing: border-box; padding: 20px 11px; border-radius: 4px;}
 .canvas-body h4{border-bottom: 1px solid #ddd; padding-bottom: 15px; font-size: 17px;}
